@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-29T08:10:06Z",
-  "count_outdated" : 1712,
-  "uniques_outdated" : 112,
+  "timestamp" : "2022-08-01T00:52:46Z",
+  "count_outdated" : 1714,
+  "uniques_outdated" : 113,
   "count" : 1803,
   "uniques" : 125,
   "views" : [
-    {
-      "timestamp": "2022-07-18T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-21T00:00:00Z",
       "count": 53,
