@@ -1,12 +1,7 @@
 {
-  "count": 91,
+  "count": 89,
   "uniques": 4,
   "views": [
-    {
-      "timestamp": "2022-07-18T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-07-21T00:00:00Z",
       "count": 53,
